# test-azure-sdk-cpp

./: CMakeLists.txt  LICENSE  README.md  main.cpp
overlays/curl/: vcpkg.json
